--- a/jsWaffleTemplate/AndroidManifest.xml
+++ b/jsWaffleTemplate/AndroidManifest.xml
@@ -29,8 +29,12 @@
             </intent-filter>
         </activity>
         
+        <!--  sub form -->
         <activity android:label="@string/app_name"
                   android:screenOrientation="portrait" android:name="com.kujirahand.jsWaffle.SubWaffleActivity">
+        </activity>
+        <activity android:label="@string/app_name"
+                  android:screenOrientation="portrait" android:name="com.kujirahand.jsWaffle.FullScreenWaffleActivity">
         </activity>
 
     </application>
