--- a/trunk/jsWaffleTemplate/AndroidManifest.xml
+++ b/trunk/jsWaffleTemplate/AndroidManifest.xml
@@ -29,16 +29,16 @@
             </intent-filter>
         </activity>
         
-        <!--  sub form -->
+        <!--  sub activity -->
         <activity android:label="@string/app_name"
-                  android:screenOrientation="portrait" android:name="com.kujirahand.jsWaffle.SubWaffleActivity">
+                  android:screenOrientation="portrait" android:name="com.kujirahand.jsWaffle.WaffleActivitySub">
         </activity>
         <activity android:label="@string/app_name"
-                  android:screenOrientation="portrait" android:name="com.kujirahand.jsWaffle.FullScreenWaffleActivity">
+                  android:screenOrientation="portrait" android:name="com.kujirahand.jsWaffle.WaffleActivityFullScreen">
         </activity>
 
     </application>
-    <uses-sdk android:minSdkVersion="4" />
+    <uses-sdk android:minSdkVersion="3" />
 
 
 </manifest> 
