--- a/trunk/jsWaffleTemplate/AndroidManifest.xml
+++ b/trunk/jsWaffleTemplate/AndroidManifest.xml
@@ -13,10 +13,8 @@
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<!-- SDカードなどへ書き込みを行う時 -->
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<!-- 
-		<uses-permission android:name="android.permission.CALL_PHONE" />
-		<uses-permission android:name="android.permission.CAMERA" />
-	 -->
+	<!-- コンタクトの情報を読み取る時 -->
+	<uses-permission android:name="android.permission.READ_CONTACTS" />
 	
     <application
     	android:icon="@drawable/icon"
