--- a/trunk/jsWaffleTemplate/AndroidManifest.xml
+++ b/trunk/jsWaffleTemplate/AndroidManifest.xml
@@ -15,7 +15,8 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<!-- コンタクトの情報を読み取る時 -->
 	<uses-permission android:name="android.permission.READ_CONTACTS" />
-	
+	<!-- カメラを使う時 -->
+	<uses-permission android:name="android.permission.CAMERA" />
     <application
     	android:icon="@drawable/icon"
     	android:label="@string/app_name"
