--- a/jsWaffleTemplate/.settings/org.eclipse.core.resources.prefs
+++ b/jsWaffleTemplate/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
-#Sat Oct 30 13:19:55 JST 2010
+#Sat Apr 02 16:59:32 JST 2011
 eclipse.preferences.version=1
+encoding//assets/www=UTF-8
 encoding/<project>=UTF-8
+encoding/src=UTF-8
