--- a/jsWaffleTemplate/AndroidManifest.xml
+++ b/jsWaffleTemplate/AndroidManifest.xml
@@ -17,6 +17,9 @@
 	<uses-permission android:name="android.permission.READ_CONTACTS" />
 	<!-- カメラを使う時 -->
 	<uses-permission android:name="android.permission.CAMERA" />
+	<!-- 録音機能を使う時 -->
+	<uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>  
+	
     <application
     	android:icon="@drawable/icon"
     	android:label="@string/app_name"
