--- a/jsWaffleTemplate/AndroidManifest.xml
+++ b/jsWaffleTemplate/AndroidManifest.xml
@@ -1,60 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="1"
-      android:versionName="1.0"
-      package="com.kujirahand.template">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.mytest">
 
-	<!-- バイブ機能を使うとき -->
-	<uses-permission android:name="android.permission.VIBRATE"/>
-	
-	<!-- インターネットへのアクセスを使う時 -->
-	<uses-permission android:name="android.permission.INTERNET" />
-	
-	<!-- GPSを使う時 -->
-	<uses-permission android:name="android.permission.ACCESS_ASSISTED_GPS" />
-	<uses-permission android:name="android.permission.ACCESS_LOCATION" />
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-	
-	<!-- SDカードなどへ書き込みを行う時 -->
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	
-	<!-- コンタクトの情報を読み取る時 -->
-	<uses-permission android:name="android.permission.READ_CONTACTS" />
-	
-	<!-- カメラを使う時 -->
-	<uses-permission android:name="android.permission.CAMERA" />
-	
-	<!-- 録音機能を使う時 -->
-	<uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>  
-	
-	<!-- 壁紙変更機能を使う時  -->
-	<uses-permission android:name="android.permission.SET_WALLPAPER" />
-	
-    <application
-    	android:icon="@drawable/icon"
-    	android:label="@string/app_name"
-    	android:debuggable="true">
-    	
+    <!-- バイブ機能を使うとき -->
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
+    <!-- インターネットへのアクセスを使う時 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- SDカードなどへ書き込みを行う時 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-sdk android:minSdkVersion="17" android:targetSdkVersion="17"/>
+
+
+    <application android:allowBackup="true" android:label="@string/app_name"
+        android:icon="@mipmap/ic_launcher" android:theme="@style/AppTheme">
+
         <activity android:label="@string/app_name"
-                  android:screenOrientation="portrait"
-                  android:name="ShowHTML">
+            android:name=".Main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <!--  sub activity -->
-        <activity android:label="@string/app_name"
-                  android:screenOrientation="portrait" android:name="com.kujirahand.jsWaffle.WaffleActivitySub">
-        </activity>
-        <activity android:label="@string/app_name"
-                  android:screenOrientation="portrait" android:name="com.kujirahand.jsWaffle.WaffleActivityFullScreen">
-        </activity>
 
     </application>
-    <uses-sdk android:minSdkVersion="3" />
 
-
-</manifest> 
+</manifest>
